[project]
name = "recreat"
version = "0.0.1"
authors = [
  { name="Sebastian Scheuer", email="seb.scheuer@outlook.de" },
]
description = "Package for the assessment of multidimensional recreational land use-based opportunities"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Windows",
]

[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"