[project]
name = "recreat"
version = "0.1.8"

authors = [
  { name="Sebastian Scheuer", email="seb.scheuer@outlook.de" },
]

description = "Indicators on Landscape Recreational Potential: Land use-based assessment of recreational opportunities under a multi-dimensional analytical lens"

readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
  "opencv-python", 
  "colorama", 
  "rich", 
  "rasterio", 
  "distancerasters", 
  "xarray-spatial", 
  "scipy", 
  "numpy", 
  "scikit-image", 
  "scikit-learn", 
  "typing", 
  "uuid", 
  "argparse",
  "click"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux"

]

[project.scripts]
recreat-util = "recreat.recreat_util:recreat_util"

[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/scheuerseb/recreat"
